- added new auto updater setting. - fixed none obtainable updater bug.